--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "angular-font-awesome": "^3.1.2",
     "angularfire2": "^5.1.1",
+    "bcrypt": "^4.0.1",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
     "firebase": "^5.8.0",
@@ -35,9 +36,9 @@
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^10.17.24",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
